// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-basic Components TopBar should be able to render with children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  padding: 13px 0;
  width: 100vw;
  height: 64px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.24);
  background-color: #foreground;
  color: #text;
}

<div
  className="c0"
>
  Test
  <div />
  Test
  <div />
  Test
</div>
`;

exports[`ui-elements-basic Components TopBar should render without children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  padding: 13px 0;
  width: 100vw;
  height: 64px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.24);
  background-color: #foreground;
  color: #text;
}

<div
  className="c0"
/>
`;
